add why choose us section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Mountain View Estates</title>
 
+    <!-- Font links -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Source+Serif+Pro&display=swap" rel="stylesheet">
+
     <!-- Bootstrap CDN links -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -16,7 +19,7 @@
   </head>
   <body>
 
-<section id="title">
+<section id="title" class="back">
 
 <div class="container-fluid">
 
@@ -42,14 +45,35 @@
       </div>
     </nav>
 
+<div class="heading">
+  <h1>Dreaming of acquiring a luxury home on the hills? </h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  <button class="btn btn-lg btn-secondary" type="button" name="button">Find out how</button>
+</div>
 
   </div>
 
 </section>
 
+    <section id="features">
 
+<div class="container-fluid">
 
-    <section>
+  <h3>WHY CHOOSE US</h3>
+
+  <div class="row">
+    <div class="col-lg-4">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+    <div class="col-lg-4">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+    <div class="col-lg-4">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+  </div>
+</div>
+
 
     </section>
 
