--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Folio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#">Location & Pricing</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="">Contact Us</a>
