HTML markup for the second half of the landing page

--- a/index.html
+++ b/index.html
@@ -1,27 +1,108 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Splash&display=swap"
+    rel="stylesheet"
+  />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="public/css/styles.css" />
+  <script defer src="/public//js/script.js"></script>
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <meta charset="utf-8" />
+    <title>ESTATE</title>
   </head>
   <body>
-    <nav>
+    <nav></nav>
+    <section class="prior"></section>
+    <!--SECOND-HALF OF THE LANDING MY PART-->
+    <section class="homes" id="homess">
+      <div class="home one">
+        <p class="num">01</p>
+        <p class="house_type">the blue sky home</p>
+        <p class="home__name">eco home</p>
+      </div>
+      <div class="home two">
+        <p class="num">02</p>
+        <p class="house_type">the blue sky home</p>
+        <p class="home__name">brick homes</p>
+      </div>
+      <div class="home three">
+        <p class="num">03</p>
+        <p class="house_type">the blue sky home</p>
+        <p class="home__name">eco home</p>
+      </div>
+      <div class="home four">
+        <p class="num">04</p>
+        <p class="house_type">the blue sky home</p>
 
-    </nav>
-    <section>
-
+        <p class="home__name">wooden house</p>
+      </div>
     </section>
 
-    <section>
+    <section class="contact__section">
+      <div class="contain">
+        <h2 class="form__header">stay in touch</h2>
 
-    </section>
+        <div class="formXdetails">
+          <form class="contact__form">
+            <input
+              class="regular__input inputs"
+              type="text"
+              placeholder="Name"
+              style="width: 93%"
+            />
 
-    <section>
+            <div class="emailXphone">
+              <input
+                class="regular__input inputs"
+                type="text"
+                placeholder="Email"
+              />
+              <input
+                class="regular__input inputs"
+                type="text"
+                placeholder="Telephone"
+              />
+            </div>
 
+            <textarea
+              name="message"
+              id="message"
+              cols="30"
+              rows="10"
+              placeholder="Message"
+              class="inputs"
+              style="width: 93%"
+            ></textarea>
+            <input type="submit" value="SEND A MESSAGE" class="submit__btn" />
+          </form>
+
+          <div class="contact__details">
+            <div class="numbers">
+              <h1>+233 (459) 123-67-52</h1>
+              <h1>+233 (459) 123-77-53</h1>
+            </div>
+            <div class="emails">
+              <p>info@realestate.com</p>
+              <p>manager@realestate.com</p>
+            </div>
+            <div class="addresses">
+              <p>Accra, Ghana</p>
+              <p>kumasi, prospect, 1, building 3</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer>
-      
+      <p class="company__logo">Mountain view</p>
+      <p class="copyrights">2022 All Rights Reserved.</p>
     </footer>
   </body>
 </html>
